--- a/README
+++ b/README
@@ -1,7 +1,8 @@
 ### Saman Amini; time stamp: Apr 4, 2014; 1:10 PM
 ### this is the readme file to describe complexes_in_pathway.html
 ### The big circle is my whole collection of proteins in complexes inside different pathways.
-### the graph is interactive means if you move your mouse cursor on each bubble the name of the gene and a number shows up.The number represent how many times that specific 
+### the graph is interactive means if you move your mouse cursor on each bubble the name of the gene and a number shows up.
+The number represent how many times that specific 
 gene is differetially expressed in a big dataset with more than 1000 deletions.
 
 ### there are protein complexes with different number of subunits.
