--- a/README
+++ b/README
@@ -7,4 +7,4 @@ gene is differetially expressed in a big dataset with more than 1000 deletions.
 
 ### there are protein complexes with different number of subunits.
 ### the name of the genes, complexes, and pathways are made up names. ;-)
-### the input file is in jason format in this folder.
+### the input file is jason format in this folder.
